# py-xiaozhi

./: .gitignore  README.md  build.json  main.py  record_test.py  requirements.txt  requirements_mac.txt
config/: .device_fingerprint  config.json  efuse.json
documents/docs/: index.md
documents/docs/.vitepress/: config.mts
documents/docs/about/team/: members-partner.json
documents/docs/architecture/: index.md
documents/docs/ecosystem/projects/intelliconnect/: index.md
documents/docs/ecosystem/projects/open-xiaoai/: index.md
documents/docs/ecosystem/projects/xiaozhi-android-client/: index.md
documents/docs/ecosystem/projects/xiaozhi-esp32-server/: index.md
documents/docs/ecosystem/projects/xiaozhi-unity/: index.md
documents/docs/guide/: 00_文档目录.md  02_配置说明.md  04_语音唤醒.md  05_IoT功能说明.md  08_设备激活流程.md  09_打包教程.md  TTS功能说明.md
documents/docs/guide/old_docs/: 使用文档.md
src/: application.py
src/audio_codecs/: audio_codec.py
src/audio_processing/: vad_detector.py  wake_word_detect.py
src/constants/: constants.py
src/display/: cli_display.py  gui_display.py  gui_display.ui
src/protocols/: websocket_protocol.py
src/utils/: common_utils.py  config_manager.py  logging_config.py  tts_utility.py
src/wake_up/: CMakeLists.txt  who_says_what.cpp
src/wake_up/doc/: implementation_summary.md  next_steps.md  refactor_plan.md  test_guide.md  重构计划.md
src/wake_up/include/: audio_buffer.h  config.h.in  portaudiorec.h  sample_common.h  speech_recognizer.h
src/wake_up/include/internal/: ivw_wrapper.h
src/wake_up/include/wake_up/: wake_up_detector.h
src/wake_up/resource/amd64/esr/fsa/: cn_fsa.txt  en_fsa.txt
src/wake_up/resource/amd64/ivw70/: many-keywords-backup.txt  many-keywords.txt
src/wake_up/resource/amd64/ivw70/audio/: hello-xd.pcm  hello-xffnh.pcm  jttq-very-nice.pcm  xbxb.pcm
src/wake_up/resource/arm64/ivw70/: keyword_nhxd.txt  many-keywords.txt
src/wake_up/src/: audio_buffer.cpp  ivw.cpp  ivw_wrapper.cpp  linuxrec.c  portaudiorec.cpp  speech_recognizer.cpp  wake_up_detector.cpp
src/wake_up/tests/: test_external_audio.cpp  test_microphone.cpp
voice_print/: infer_recognition.py  voice_recognition_wrapper.py  voiceprint_manager.py
voice_print/mvector/: predict.py
voice_print/mvector/utils/: checkpoint.py  record.py
